# stylang

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
crates/cst/: Cargo.toml
crates/cst/src/: attr.rs  block.rs  cfg.rs  errors.rs  generic.rs  generics.rs  input.rs  item.rs  item_fn.rs  item_struct.rs  keyword.rs  lib.rs  lit.rs  macros.rs  misc.rs  outer.rs  pat.rs  path.rs  punct.rs  stmt.rs  ty.rs  types.rs  vs.rs
crates/cst/src/expr/: array.rs  assign.rs  binary.rs  block.rs  bracket.rs  call.rs  chains.rs  closure.rs  const.rs  continue.rs  ctr.rs  expr.rs  field.rs  for.rs  group.rs  if.rs  index.rs  infer.rs  let.rs  lit.rs  loop.rs  match.rs  mod.rs  paren.rs  path.rs  range.rs  refer.rs  repeat.rs  struct.rs  unary.rs
crates/cst/src/item/: attr.rs  fn.rs  fn_.rs  mod.rs  outer.rs  trait.rs
crates/cst/src/lexical/: comments.rs  delimiter.rs  ident.rs  keywords.rs  label.rs  lit.rs  mod.rs  punct.rs  s.rs
crates/cst/src/lexical/lit/: brstr1.txt  crstr0.txt  crstr1.txt  ecacpes.rs  mod.rs  num.rs  str.rs
crates/cst/src/lexical/lit/tests/: brstr0.txt  rstr0.txt  rstr1.txt
crates/cst/src/macros/: invocation.rs  mod.rs  rule.rs
crates/cst/src/names/: mod.rs  paths.rs
crates/cst/src/pat/: ident.rs  mod.rs  pat.rs  pattern.rs  refer.rs  slice.rs  struct.rs  tuple.rs  ty.rs
crates/cst/src/syntax/: attr.rs  comments.rs  item.rs  lit.rs  mod.rs  ty.rs  vs.rs
crates/cst/src/token/: comment.rs  keyword.rs  lit.rs  mod.rs  op.rs  punct.rs
crates/cst/unsyn/: attrs.us  cfg.us  crate.us  items.us  lib.us  macros.us  paths.us  patt.us  stmt.us  types.us
crates/cst/unsyn/lexical/: comments.us  ident.us  input.us  keywords.us  mod.us  s.us  tokens.us
crates/parser/: Cargo.toml
crates/parser/src/: errors.rs  input.rs  lib.rs
crates/parser/src/syntax/: mod.rs
crates/parser/src/token/: keyword.rs  mod.rs  ops.rs  s.rs  tokens.rs
crates/unsyn/: Cargo.toml
crates/unsyn/src/: errors.rs  input.rs  lib.rs  lit.rs
spec/: cfg_attr.st  newtonian.st
stdlib/: attribute.st  convert.st  lib.st  log.st  ops.st  result.st  unit.st
stdlib/graphics/: path.st  types.st
