[package]
description = "Concrete Syntax Tree for `stylang` based on `parserc` infrastructure"
documentation = "https://docs.rs/stylang-cst"
edition = "2024"
license = "MIT"
name = "stylang-cst"
repository = "https://github.com/stylang/stylang/crates/cst"
version.workspace = true

[dependencies]
thiserror = "2.0.17"
memchr = { version = "^2.7" }
parserc = { version = "^0.11", default-features = false, features = ["syntax","input"]}
serde = { version = "1.0.228", optional = true }

[features]
default = ["serde"]
serde = ["dep:serde","parserc/serde"]
