[package]
description = "Concrete Syntax Tree for `stylang` based on `parserc` infrastructure, It also serves as a Rust source code-compatible front-end parser."
documentation = "https://docs.rs/stylang-cst"
edition = "2024"
license = "MIT"
name = "stylang-cst"
repository = "https://github.com/stylang/stylang/crates/cst"
version.workspace = true

[dependencies]
thiserror = "2.0.17"
memchr = { version = "^2.7" }
parserc = { version = "^0.12", default-features = false, features = ["syntax","input"]}
serde = { version = "1.0.228", optional = true }

[dev-dependencies]
serde_json = "1.0.145"

[features]
default = ["serde","rust"]
serde = ["dep:serde","parserc/serde"]
rust = []
